      getContentAsJSONArray(), getContentAsJWT() and setContent(String).
    * Adds URLUtils.setEncodedQuery(String) and setEncodedFragment(String)
      methods.
    * URLUtils.parseParameters(String) switches to LinkedHashMap.
    * The TokenIntrospectionRequest.parse must use only the form parameters
      found in the request body, URL query string parameters must be ignored
      (iss #432).
    * Switches LogoutRequest.toHTTPRequest() from HTTP GET to POST to prevent
      the optional id_token_hint parameter from getting exposed in access logs
      (iss #439).

version 11.1 (2023-10-05)
    * Updates AuthorizationResponse.parseResponseParameters(HTTPRequest) to use
      the new HTTPRequest methods.
    * Removes System.out.println in AuthenticationRequest.parse method.
    * Updates Nimbus JOSE+JWT to 9.35

version 11.2 (2023-10-09)
    * Adds static URIUtils.isLocalHost method.
    * Updates to commons-codec:commons-codec:1.15

version 11.3 (2023-10-18)
    * Updates the ClientAuthenticationVerifier to enable support of JWT ID
      reuse prevention for the "client_secret_jwt" and the "private_key_jwt"
      authentication methods.
    * Adds ExpendedJTIChecker interface for use by the
      ClientAuthenticationVerifier to enable JWT ID (jti) claim reuse
      prevention.

version 11.4 (2023-10-18)
    * JWTAssertionDetailsVerifier, JWTAuthenticationClaimsSetVerifier and
      ClientAuthenticationVerifier can be configured with an optional check to
      prevent expiration time (exp) JWT claims that are too far ahead of the
      current time. Intended to prevent DoS attacks against JWT assertion
      consumers that utilise a store to prevent JWT replay.
    * The default expiration time (exp) claim in JWTAuthenticationClaimsSet the
      constructor is reduced from 5 to 1 minute from the current system time.

version 11.5 (2023-10-23)
    * Moves the HTTPRequest.getConnectTimeout and getReadTimeout methods to the
      ReadOnlyHTTPRequest interface.