@@ -2341,5 +2341,7 @@ version 11.4 (2023-10-18)
       constructor is reduced from 5 to 1 minute from the current system time.
 
 version 11.5 (2023-10-23)
+    * Adds a DefaultEntityStatementRetriever constructor to support custom
+      HTTPRequestSender instances.
     * Moves the HTTPRequest.getConnectTimeout and getReadTimeout methods to the
       ReadOnlyHTTPRequest interface.
